Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.cpp
@@ -165,11 +165,17 @@ void RemoteImageBuffer::transformToColorSpace(const WebCore::DestinationColorSpa
     m_imageBuffer->transformToColorSpace(colorSpace);
 }
 
-void RemoteImageBuffer::flushContext(IPC::Semaphore&& semaphore)
+void RemoteImageBuffer::setFlushSignal(IPC::Signal&& signal)
 {
+    m_flushSignal = WTFMove(signal);
+}
+
+void RemoteImageBuffer::flushContext()
+{
+    RELEASE_ASSERT(m_flushSignal);
     assertIsCurrent(workQueue());
     m_imageBuffer->flushDrawingContext();
-    semaphore.signal();
+    m_flushSignal->signal();
 }
 
 void RemoteImageBuffer::flushContextSync(CompletionHandler<void()>&& completionHandler)
