Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.h
@@ -27,6 +27,7 @@
 
 #if ENABLE(GPU_PROCESS)
 
+#include "IPCEvent.h"
 #include "ScopedRenderingResourcesRequest.h"
 #include "ShareableBitmap.h"
 #include "StreamMessageReceiver.h"
@@ -64,12 +65,14 @@ private:
     void getFilteredImage(Ref<WebCore::Filter>, CompletionHandler<void(std::optional<ShareableBitmap::Handle>&&)>&&);
     void convertToLuminanceMask();
     void transformToColorSpace(const WebCore::DestinationColorSpace&);
-    void flushContext(IPC::Semaphore&&);
+    void setFlushSignal(IPC::Signal&&);
+    void flushContext();
     void flushContextSync(CompletionHandler<void()>&&);
 
     RefPtr<RemoteRenderingBackend> m_backend;
     Ref<WebCore::ImageBuffer> m_imageBuffer;
     ScopedRenderingResourcesRequest m_renderingResourcesRequest { ScopedRenderingResourcesRequest::acquire() };
+    std::optional<IPC::Signal> m_flushSignal;
 };
 
 } // namespace WebKit
